# carteirAI

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
db/: README.md  apply.sh  seed.sql
db/migrations/: 0001_init.sql  0002_fila_ingestao.sql  0003_contas_package_name.sql  0004_auth_credentials.sql
docs/: 00-handoff.md  01-visao-e-arquitetura.md  02-modelo-de-dados.md  03-fluxos.md  04-operacoes-pi.md  05-analise-critica-arquitetura.md  06-arquitetura-alvo.md  07-painel-web.md  DECISOES-PENDENTES.md  PARA-LER.md  backlog.md  handoff-ajuste-onboarding.md  ollama-vpn-setup.md
docs/tdd/: 00-estrategia-tdd.md  01-contratos-ingestao-ia.md  02-contratos-financeiro.md  03-contratos-telegram.md  04-plano-integracao.md  05-contratos-http-ingestao.md  06-contratos-comandos-acao.md  07-contratos-sqlalchemy.md  08-contratos-fila-ingestao.md  09-contratos-worker.md  10-contratos-notificador.md  11-contratos-persistencia-unificada.md
painel/: .gitignore  auth.ts  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
painel/app/: globals.css  layout.tsx
painel/components/: app-shell.tsx  sparkline.tsx  ui.tsx
painel/lib/: fake-data.ts  format.ts
painel/scripts/: crawl.mjs
scripts/: deploy-pi.sh  register_commands.py  start-all.sh
tests/: fakes.py
tests/integration/: test_persistencia_unificada.py  test_pipeline_worker.py  test_sqlalchemy_repos.py
tests/unit/: test_aprovacao.py  test_auditor.py  test_auditor_forma_tipo.py  test_comandos.py  test_comandos_acao.py  test_competencia.py  (+14 more)
(+49 files in other folders)
