[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carteirai"
version = "0.1.0"
description = "Worker de gestão financeira (Pi): ingestão, IA (LLM + auditor), Telegram."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
